Finalização da tela de histórico